assets/css/style.scss
/* ... */
.post-preview .post-author-name:hover {
    text-decoration: underline;
}

.post-preview > .post-preview-content > .post-preview-description {
    display: block;
    margin-top: 6px;
    margin-bottom: 1rem;
    text-decoration:none
}

.post-author-name {
    font-weight: 600;
    color: var(--print_secondary, #757575); 
}

.main-content .post-subtitle {
  // Use negative margin to shrink title margin when subtitle is present
  margin-top: -0.75em;
}

.main-content .post-authors {
    line-height: 2.5rem;
    margin-top: 5px;
}

.post-preview-content h3 {
    margin: 0;
    font-weight: bold;
}

.post-author-image {
    height: 2.5rem;
    border-radius: 100%;
    float: left;
    margin-right: 10px;
    border: 1px solid #ccc;
}

.post-author-image:not(:first-child) {
    margin-left: -1.5rem;
}

.post-header-image-wrapper {
    margin-top: 2rem;
    margin-bottom: 2rem;
}

.post-header-image {
    background-color: #eee;
    width: 100%;
    height: 20rem;
    background-size: cover;
    background-position: center;
}

.post-header-image-attribution {
    width: 100%;
    text-align: right;
    font-style: italic;
    font-size: small;
}

.post-preview:not(.hidden) ~ .post-preview:not(.hidden) {
    border-top: 1px solid #eee;
}

input[type="search"]::-webkit-search-cancel-button {
    -webkit-appearance: searchfield-cancel-button;
    display: block;
    flex-grow: 0;
    flex-shrink: 0;
    flex-basis: auto;
    align-self: flex-start;
    margin-top: auto;
    margin-right: 0px;
}

